manifests/prodlab/bookstack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstack
  namespace: prodlab
  labels:
    app.kubernetes.io/name: bookstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bookstack
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bookstack
    spec:
      automountServiceAccountToken: false
      containers:
      - name: bookstack
        image: linuxserver/bookstack
        securityContext:
          capabilities:
            drop:
            - CAP_NET_RAW
        volumeMounts:
        - name: config
          mountPath: /config
        ports:
        - name: web
          containerPort: 80
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: bookstack
---
apiVersion: v1
kind: Service
metadata:
  name: bookstack
  namespace: prodlab
spec:
  selector:
    app.kubernetes.io/name: bookstack
  ports:
  - protocol: TCP
    name: web
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstack
  namespace: prodlab
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-array21"
    nginx.ingress.kubernetes.io/proxy-body-size: 150m

spec:
  tls:
  - hosts:
    - wiki.k8s.array21.dev
    secretName: wiki-k8s-array21-dev
  rules:
  - host: wiki.k8s.array21.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bookstack
            port:
              number: 80
