manifests/prodlab/docker-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: prodlab
  labels:
    app: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
      - name: docker-registry
        image: registry:2.7.1
        ports:
        - containerPort: 5000
          name: main
        volumeMounts:
        - name: registry-storage
          mountPath: /var/lib/registry
      - name: docker-registry-ui
        image: joxit/docker-registry-ui:2.0
        ports:
        - containerPort: 80
          name: interface
      volumes:
      - name: registry-storage
        persistentVolumeClaim:
          claimName: docker-registry
---
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: prodlab
spec:
  selector:
    app: docker-registry
  ports:
  - protocol: TCP
    name: main
    port: 443
    targetPort: 5000
  - protocol: TCP
    name: interface
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-registry
  namespace: prodlab
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/enable-cors: "true"    
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    cert-manager.io/cluster-issuer: "letsencrypt-array21"

spec:
  tls:
  - hosts:
    - docker-registry.k8s.array21.dev
    secretName: docker-registry-k8s-array21-tls
  rules:
  - host: docker-registry.k8s.array21.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: docker-registry
            port:
              number: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-dashboard-registry-ingress
  namespace: prodlab
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.10.0.0/16"
    cert-manager.io/cluster-issuer: "letsencrypt-array21"

spec:
  tls:
  - hosts:
    - docker-dashboard.k8s.array21.dev
    secretName: docker-dashboard-k8s-array21-tls
  rules:
  - host: docker-dashboard.k8s.array21.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: docker-registry
            port:
              number: 80
