manifests/prodlab/gitea.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: prodlab
  labels:
    app.kubernetes.io/name: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gitea
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gitea
    spec:
      automountServiceAccountToken: false
      containers:
      - name: gitea
        image: gitea/gitea:1.14.4
        securityContext:
          capabilities:
            drop:
            - CAP_NET_RAW
        ports:
        - name: web
          containerPort: 3000
        - name: ssh
          containerPort: 22
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: gitea
---
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: prodlab
spec:
  selector:
    app.kubernetes.io/name: gitea
  ports:
  - protocol: TCP
    name: web
    port: 3000
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh
  namespace: prodlab
spec:
  ports:
  - protocol: TCP
    port: 22
    targetPort: 22
    name: ssh
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  namespace: prodlab
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-array21"
    nginx.ingress.kubernetes.io/proxy-body-size: 150m

spec:
  tls:
  - hosts:
    - gitea.k8s.array21.dev
    secretName: gitea-k8s-array21-dev
  rules:
  - host: gitea.k8s.array21.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea
            port:
              number: 3000
