manifests/prodlab/phpmyadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  namespace: prodlab
  labels:
    app.kubernetes.io/name: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: phpmyadmin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: phpmyadmin
    spec:
      automountServiceAccountToken: false
      containers:
      - name: phpmyadmin
        image: phpmyadmin/phpmyadmin
        ports:
        - name: web
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: prodlab
  name: phpmyadmin
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: phpmyadmin
  ports:
  - protocol: TCP
    name: web
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin
  namespace: prodlab
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-array21"
#    nginx.ingress.kubernetes.io/whitelist-source-range: "10.10.0.0/16"
    nginx.ingress.kubernetes.io/proxy-body-size: 150m

spec:
  tls:
  - hosts:
    - phpmyadmin.k8s.array21.dev
    secretName: phpmyadmin-k8s-array21-dev
  rules:
  - host: phpmyadmin.k8s.array21.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phpmyadmin
            port:
              number: 80
